# mojap-metadata

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  poetry-pypi-release.yml  test-mojap-suite.yml  test-sqlalchemy.yml  test.yml
docs/converters/: arrow_converter.md  aws_iceberg_converter.md  etl_manager_converter.md  glue_converter.md  postgres_converter.md  sqlalchemy_converter.md
mojap_metadata/: __init__.py  logging_functions.py  test_dependencies.py
mojap_metadata/converters/: __init__.py  base_converter.py  glue_converter.py  pandas_converter.py
mojap_metadata/converters/arrow_converter/: __init__.py
mojap_metadata/converters/aws_iceberg_converter/: __init__.py  exceptions.py  iceberg_metadata.py
mojap_metadata/converters/aws_iceberg_converter/specs/: alter_add_columns.sql  alter_change_column.sql  alter_drop_column.sql  create.sql
mojap_metadata/converters/database_converter/: README.md  __init__.py  connect.py  database_functions.py
mojap_metadata/converters/etl_manager_converter/: __init__.py
mojap_metadata/converters/glue_converter/: README.md  __init__.py  configs.py  glue_converter.py
mojap_metadata/converters/glue_converter/specs/: hive_json_ddl.txt  hive_json_spec.json  json_ddl.txt  lazy_csv_ddl.txt  lazy_csv_spec.json  open_csv_ddl.txt  open_csv_spec.json  openx_json_ddl.txt  openx_json_spec.json  (+2 more)
mojap_metadata/converters/postgres_converter/: README.md  __init__.py  connect.py  postgres_functions.py
mojap_metadata/converters/rapid_api_converter/: __init__.py
mojap_metadata/converters/sqlalchemy_converter/: README.md  __init__.py  sqlalchemy_functions.py  utils.py
mojap_metadata/extractors/: README.md  connect.py  postgres_functions.py  postgres_metadata.py
mojap_metadata/metadata/: __init__.py  meta.py  metadata.py
mojap_metadata/metadata/specs/: table_schema.json
mojap_metadata/tables_properties_testing/: create_table.py
tables_properties_testing/: create_table.py  mock_table.json  schema_mock.json
tests/: .oracle_credentials.sh  .oracle_image.sh  __init__.py  conftest.py  helper.py  test_arrow_converter.py  test_aws_iceberg_converter.py  test_database_converter_postgres.py  test_database_converter_sqlite.py  test_database_convertor.py  test_database_convertor_sqlite.py  test_etl_manager_converter.py  test_glue_converter.py  test_glue_table.py  test_helpers.py  test_metadata.py  test_metadata_mutable_mapping.py  test_postgres.py  test_sqlalchemy.py  test_sqlalchemy_converter.py  test_sqlalchemy_converter_postgres.py  test_sqlalchemy_converter_sqlite.py  test_sqlalchemy_mapping.py  test_sqlalchemy_utils.py
tests/data/aws_iceberg_converter/: expected_glue_metadata.json  glue_response.json  iceberg_metadata.json  metadata.json
tests/data/glue_converter/: test_simple_hive_json.json  test_simple_hive_json.txt  test_simple_json.txt  test_simple_lazy_csv.json  test_simple_lazy_csv.txt  test_simple_open_csv.json  test_simple_open_csv.txt  test_simple_openx_json.json  test_simple_openx_json.txt  test_simple_parquet.json  test_simple_parquet.txt
tests/data/postgres_extractor/: postgres_table1.csv  postgres_table2.csv
tests/data/sqlalchemy_converter/: testpg0.csv  testpg1.csv
tests/scripts/: .oracle_image.sh  .postgres_image.sh  .sqlalchemy_envs.sh
