[tool]
[tool.poetry]
name = "mojap-metadata"
version = "1.14.0"
description = "A python package to manage metadata"
license = "MIT"
authors = ["MoJ Data Engineering <dataengineering@digital.justice.gov.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
jsonschema = ">=3.0.0"
parameterized = "0.7.*"
PyYAML = "^6.0"
Jinja2 = ">=2.10.1"
pyarrow = { version = ">=3.0.0", optional = true }
etl-manager = { version = "^7.4", optional = true }
awswrangler = { version = ">=3.1.1", optional = true, extras = ["aws-iceberg"]}
psycopg2 = { version = "^2.9.2", optional = true,  extras = ["postgres"]}
"testing.postgresql" ={ version = "^1.3.0", optional = true,  extras = ["postgres"]}
SQLAlchemy = { version = "^1.4.27", optional = true,  extras = ["postgres"]}
dataengineeringutils3 = ">=1.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = ">=20.8b1"
pytest = ">=6.1.2"
pytest-watch = ">=4.2.0"
moto = "^2.2.11"
pandas = "^1.5.0"
duckdb-engine = "^0.7.0"
oracledb = "^1.3.0"
pre-commit = ">=3.3.2"

[tool.poetry.extras]
arrow = ["pyarrow"]
etl-manager = ["etl-manager"]
postgres = ["psycopg2","testing.postgresql","SQLAlchemy"]
aws-iceberg = ["awswrangler"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
